Relative URLs added for Hat pics.  Need to identify CSS issue so that there is no overflow over the bottom band and footer

--- a/styles/index.css
+++ b/styles/index.css
@@ -14,3 +14,7 @@ img {
 .row {
     overflow: hidden;
 }
+
+html {
+    overflow-y: scroll;
+}
