--- a/styles/tables.css
+++ b/styles/tables.css
@@ -47,8 +47,10 @@ table {
 }
 
 .table {
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
     margin-bottom: 1.52941em
+
 }
 
 .table th, .table td {
